# fifa-simulator

./: .gitignore  CMakeLists.txt  README.md
data/: formations.json
include/api/: APIClient.h  PlayerFetcher.h
include/database/: Database.h
include/game/: ChemistryCalculator.h  Club.h  Formation.h  Menu.h  Squad.h
include/models/: AttackerPlayer.h  BronzeCard.h  Card.h  DefenderPlayer.h  GKPlayer.h  GoldCard.h  MidfielderPlayer.h  Player.h  SilverCard.h
include/packs/: BronzePack.h  GoldPack.h  Pack.h  PackFactory.h  PremiumGoldPack.h  SilverPack.h
include/utils/: Config.h  RatingGenerator.h
src/: main.cpp
src/api/: APIClient.cpp  PlayerFetcher.cpp
src/database/: Database.cpp
src/game/: ChemistryCalculator.cpp  Club.cpp  Formation.cpp  Menu.cpp  Squad.cpp
src/models/: AttackPlayer.cpp  AttackerPlayer.cpp  BronzeCard.cpp  Card.cpp  DefenderPlayer.cpp  GKPlayer.cpp  GoldCard.cpp  MidfielderPlayer.cpp  Player.cpp  SilverCard.cpp
src/packs/: BronzePack.cpp  GoldPack.cpp  Pack.cpp  PackFactory.cpp  PremiumGoldPack.cpp  SilverPack.cpp
src/utils/: Config.cpp  RatingGenerator.cpp
